[gd_scene load_steps=27 format=3 uid="uid://bahganb054t0c"]

[ext_resource type="PackedScene" uid="uid://c7iimm16s3que" path="res://Assets/ObjectModels/office_walls.glb" id="1_2uhvn"]
[ext_resource type="Script" uid="uid://41orhoyo52bs" path="res://Scripts/night.gd" id="1_i5a8x"]
[ext_resource type="PackedScene" uid="uid://p4gusk1ysuej" path="res://Assets/ObjectModels/desk.glb" id="2_ndvps"]
[ext_resource type="PackedScene" uid="uid://xieogyibnulk" path="res://Scenes/UI/monitor_ui.tscn" id="4_hurcf"]
[ext_resource type="PackedScene" uid="uid://02xf0rq7jck1" path="res://Assets/ObjectModels/router.glb" id="5_1bhon"]
[ext_resource type="PackedScene" uid="uid://vffuitiwqgwp" path="res://Assets/ObjectModels/vending_machine.glb" id="7_mvn8s"]
[ext_resource type="Script" uid="uid://dbiehm26h2kpv" path="res://Scripts/camera.gd" id="7_n8f0r"]
[ext_resource type="PackedScene" uid="uid://dmqnuj8a60ys7" path="res://Scenes/UI/ui.tscn" id="7_usg6m"]
[ext_resource type="PackedScene" uid="uid://dg2dngs73jxqg" path="res://Scenes/Objects/monitor.tscn" id="10_hurcf"]
[ext_resource type="PackedScene" uid="uid://c045w6t6871lf" path="res://Scenes/Objects/ethernet_cable.tscn" id="10_loplb"]
[ext_resource type="PackedScene" uid="uid://smf028cbu0yc" path="res://Scenes/Objects/door.tscn" id="11_i5a8x"]
[ext_resource type="Script" uid="uid://b4khyc7w4ekij" path="res://Scripts/Animatronics/kir1lkata.gd" id="11_r8eh5"]
[ext_resource type="PackedScene" uid="uid://dhj3qx6ygyk4d" path="res://Assets/ObjectModels/clock.glb" id="12_plow2"]
[ext_resource type="AudioStream" uid="uid://bp1wt68qeg7gt" path="res://Assets/Sounds/power_ambience.mp3" id="12_r8eh5"]
[ext_resource type="AudioStream" uid="uid://bkc000ebyhqsq" path="res://Assets/Sounds/Animatronic/kir1lkata_running.mp3" id="13_gkxo8"]
[ext_resource type="Script" uid="uid://csn3gyixxlqkh" path="res://Scripts/Animatronics/void.gd" id="13_hurcf"]
[ext_resource type="AudioStream" uid="uid://buky48bst84i0" path="res://Assets/Sounds/Animatronic/Jumpscares/kir1lkata_jumpscare.mp3" id="14_udoo7"]
[ext_resource type="AudioStream" uid="uid://cpjo82vmpe4i8" path="res://Assets/Sounds/Animatronic/kir1lkata_rage.mp3" id="15_fur6u"]
[ext_resource type="AudioStream" uid="uid://b4frum3uve82" path="res://Assets/Sounds/Animatronic/kir1lkata_slam.mp3" id="16_fur6u"]
[ext_resource type="Script" uid="uid://cn1f1b2vuji0a" path="res://Scripts/Animatronics/soletki.gd" id="18_7g1oc"]
[ext_resource type="AudioStream" uid="uid://djdtmg6bpqay7" path="res://Assets/Sounds/Animatronic/soletki_knocking.mp3" id="19_ayv6d"]
[ext_resource type="Script" uid="uid://ci1qdkw474o2v" path="res://Scripts/Animatronics/martin.gd" id="20_kyc5m"]
[ext_resource type="Script" uid="uid://2hejg5wy1014" path="res://Scripts/Animatronics/toniabv69.gd" id="21_kyc5m"]
[ext_resource type="Script" uid="uid://blmv5tw4vsi38" path="res://Scripts/Animatronics/faith.gd" id="22_e4seg"]

[sub_resource type="Environment" id="Environment_i5a8x"]

[sub_resource type="Environment" id="Environment_annbh"]

[node name="Night" type="Node3D"]
script = ExtResource("1_i5a8x")

[node name="Camera" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 4.98, 0)
environment = SubResource("Environment_i5a8x")
current = true
fov = 64.6
script = ExtResource("7_n8f0r")

[node name="PlayerUI" parent="Camera" instance=ExtResource("7_usg6m")]

[node name="MonitorUI" parent="Camera" instance=ExtResource("4_hurcf")]
visible = false

[node name="Light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.687339, 0)
light_energy = 5.0
light_indirect_energy = 5.0
light_volumetric_fog_energy = 0.835
light_size = 0.052
shadow_enabled = true
shadow_transmittance_bias = 0.38
shadow_opacity = 0.35
shadow_blur = 10.0
omni_range = 17.720331

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_annbh")

[node name="Office" type="Node" parent="."]

[node name="OfficeWalls" parent="Office" instance=ExtResource("1_2uhvn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.79966825, -0.031151295, 0, 0.016144753)

[node name="Desk" parent="Office" instance=ExtResource("2_ndvps")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, -0.72563076, 5.5778074)

[node name="Router" parent="Office" instance=ExtResource("5_1bhon")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 3.5618649, 2.9886117, 6.7151575)

[node name="VendingMachine" parent="Office" instance=ExtResource("7_mvn8s")]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, -7.957, 4.17, 0)

[node name="Door" parent="Office" instance=ExtResource("11_i5a8x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.023903847, 4.292261, -8.776262)

[node name="EthernetCable" parent="Office" instance=ExtResource("10_loplb")]
transform = Transform3D(-0.5, 0, -2.2992191e-08, 0, 0.5, 0, 4.371139e-08, 0, -0.263, 3.574, 2.989, 7.676)
visible = false

[node name="Monitor" parent="Office" instance=ExtResource("10_hurcf")]
transform = Transform3D(-6.556708e-08, 0, -1.5, 0, 1.5, 0, 1.5, 0, -6.556708e-08, 0, 4.98, 6.708)

[node name="Clock" parent="Office" instance=ExtResource("12_plow2")]
transform = Transform3D(-4.3711385e-08, 0, -0.99999994, 0, 1, 0, 0.99999994, 0, -4.3711385e-08, -5.4037933, 8.227993, -8.378357)

[node name="Animatronics" type="Node" parent="."]
unique_name_in_owner = true

[node name="Kir1lkata" type="Node" parent="Animatronics"]
script = ExtResource("11_r8eh5")
metadata/_custom_type_script = "uid://dfdhmjn8yonjp"

[node name="Timer" type="Timer" parent="Animatronics/Kir1lkata"]
wait_time = 16.0
autostart = true

[node name="Kir1lkataRunning" type="AudioStreamPlayer3D" parent="Animatronics/Kir1lkata"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -75, 0, -10)
stream = ExtResource("13_gkxo8")
max_distance = 80.0

[node name="Kir1lkataJumpscare" type="AudioStreamPlayer3D" parent="Animatronics/Kir1lkata"]
stream = ExtResource("14_udoo7")

[node name="Kir1lkataRage" type="AudioStreamPlayer3D" parent="Animatronics/Kir1lkata"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -81.62962, 0, 75.81858)
stream = ExtResource("15_fur6u")
max_distance = 150.0

[node name="Kir1lkataSlam" type="AudioStreamPlayer3D" parent="Animatronics/Kir1lkata"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.7955074, -9.358082)
stream = ExtResource("16_fur6u")

[node name="Void" type="Node" parent="Animatronics"]
script = ExtResource("13_hurcf")
metadata/_custom_type_script = "uid://dfdhmjn8yonjp"

[node name="Soletki" type="Node" parent="Animatronics"]
script = ExtResource("18_7g1oc")
metadata/_custom_type_script = "uid://dfdhmjn8yonjp"

[node name="AttackTimer" type="Timer" parent="Animatronics/Soletki"]
wait_time = 4.0
one_shot = true

[node name="SoletkiKnocking" type="AudioStreamPlayer3D" parent="Animatronics/Soletki"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.439536, -9.373125)
stream = ExtResource("19_ayv6d")

[node name="SoletkiJumpscare" type="AudioStreamPlayer3D" parent="Animatronics/Soletki"]
stream = ExtResource("14_udoo7")

[node name="Martin" type="Node" parent="Animatronics"]
script = ExtResource("20_kyc5m")
metadata/_custom_type_script = "uid://dfdhmjn8yonjp"

[node name="AskTimer" type="Timer" parent="Animatronics/Martin"]
wait_time = 15.0
autostart = true

[node name="AttackTimer" type="Timer" parent="Animatronics/Martin"]
wait_time = 25.0
one_shot = true

[node name="MartinJumpscare" type="AudioStreamPlayer3D" parent="Animatronics/Martin"]
stream = ExtResource("14_udoo7")

[node name="Toniabv69" type="Node" parent="Animatronics"]
script = ExtResource("21_kyc5m")
metadata/_custom_type_script = "uid://dfdhmjn8yonjp"

[node name="SendResponseTimer" type="Timer" parent="Animatronics/Toniabv69"]
one_shot = true

[node name="Toniabv69Jumpscare" type="AudioStreamPlayer3D" parent="Animatronics/Toniabv69"]
stream = ExtResource("14_udoo7")

[node name="Faith" type="Node" parent="Animatronics"]
script = ExtResource("22_e4seg")
metadata/_custom_type_script = "uid://dfdhmjn8yonjp"

[node name="AudioPlayers" type="Node" parent="."]

[node name="AmbiencePlayer" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("12_r8eh5")
volume_db = -40.0
autoplay = true
parameters/looping = true

[connection signal="timeout" from="Animatronics/Kir1lkata/Timer" to="Animatronics/Kir1lkata" method="_on_timer_timeout"]
[connection signal="finished" from="Animatronics/Kir1lkata/Kir1lkataRunning" to="Animatronics/Kir1lkata" method="_on_kir_1_lkata_running_finished"]
[connection signal="finished" from="Animatronics/Kir1lkata/Kir1lkataRage" to="Animatronics/Kir1lkata" method="_on_kir_1_lkata_rage_finished"]
[connection signal="timeout" from="Animatronics/Soletki/AttackTimer" to="Animatronics/Soletki" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Animatronics/Martin/AskTimer" to="Animatronics/Martin" method="_on_ask_timer_timeout"]
[connection signal="timeout" from="Animatronics/Martin/AttackTimer" to="Animatronics/Martin" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Animatronics/Toniabv69/SendResponseTimer" to="Animatronics/Toniabv69" method="_on_send_response_timer_timeout"]
